Cleanup to remove error messages